--- a/index.html
+++ b/index.html
@@ -16,5 +16,20 @@
         <li><a href="#">header link threee</a></li>
       </ul>
     </header>
+    <section>
+      <div class="section-one">
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower in contrast.
+        </p>
+        <button class="sign-up">Sign Up</button>
+      </div>
+      <img
+        src="./images/photo-1453728013993-6d66e9c9123a.jpeg"
+        alt="camera lense"
+        class="main-image"
+      />
+    </section>
   </body>
 </html>
