add images, style & add contents to main section

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   </head>
   <body>
     <header>
-      <h3 class="logo">Header Logo</h3>
+      <h3 class="logo">Travelista</h3>
       <ul class="nav_links">
-        <li><a href="#">header link one</a></li>
-        <li><a href="#">header link two</a></li>
-        <li><a href="#">header link threee</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Sign Up</a></li>
       </ul>
     </header>
-    <section>
-      <div class="section-one">
-        <h1>This website is awesome</h1>
+    <section class="section-one">
+      <div class="main-one">
+        <p class="main-text">Travel with a Peace of mind.</p>
         <p>
           This website has some subtext that goes here under the main title.
           It's a smaller font and the color is lower in contrast.
@@ -30,6 +30,10 @@
         alt="camera lense"
         class="main-image"
       />
+    </section>
+    <section class="section-two">
+      <h2>Best Places to Travel.</h2>
+      <div class="travel-destination"></div>
     </section>
   </body>
 </html>
