add travel section, position images, and style travel section

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </header>
     <section class="section-one">
       <div class="main-one">
-        <p class="main-text">Travel with a Peace of mind.</p>
-        <p>
+        <p class="main-text">Travel with a peace of mind.</p>
+        <p class="sub-text">
           This website has some subtext that goes here under the main title.
           It's a smaller font and the color is lower in contrast.
         </p>
@@ -33,7 +33,33 @@
     </section>
     <section class="section-two">
       <h2>Best Places to Travel.</h2>
-      <div class="travel-destination"></div>
+      <div class="travel-destinations">
+        <div class="location">
+          <img
+            src="./images/jezael-melgoza-alY6_OpdwRQ-unsplash.jpg"
+            alt="japan"
+          />
+          <p class="destination-caption">Tour the city of Japan</p>
+        </div>
+        <div class="location">
+          <img
+            src="./images/leonard-cotte-R5scocnOOdM-unsplash.jpg"
+            alt="france"
+          />
+          <p>Tour the city of Paris</p>
+        </div>
+        <div class="location">
+          <img src="./images/aman-mzEyEp3syMI-unsplash.jpg" alt="cancun" />
+          <p>Tour the city of Cancun</p>
+        </div>
+        <div class="location">
+          <img
+            src="./images/annie-spratt-1maMpGNDEwA-unsplash.jpg"
+            alt="india"
+          />
+          <p>Tour the city of India</p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
