create quote section and add quote

--- a/index.html
+++ b/index.html
@@ -61,5 +61,16 @@
         </div>
       </div>
     </section>
+    <section class="section-three">
+      <div class="inspiring-quote">
+        <p>
+          <em
+            >Be courageous. Challenge orthodoxy. Stand up for what you believe
+            in. When you are in your rocking chair talking to your grandchildren
+            many years from now, be sure you have a good story to tell.”
+          </em>
+        </p>
+      </div>
+    </section>
   </body>
 </html>
