clean and refactor

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
       <div class="main-one">
         <p class="main-text">Travel with a peace of mind.</p>
         <p class="sub-text">
-          This website has some subtext that goes here under the main title.
-          It's a smaller font and the color is lower in contrast.
+          <em>
+            To leave where you are takes courage. Travelista gives you the
+            courage to travel the world.
+          </em>
         </p>
         <button class="sign-up">Sign Up</button>
       </div>
