align quote with cite

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
             many years from now, be sure you have a good story to tell.”
           </em>
         </p>
+        <footer>-Amal Clooney, Law and Human Rights Activist</footer>
+      </div> 
+      <!-- <div class="quote-author">
+        <p>-Amal Clooney, Law and Human Rights Activist</p>
       </div>
     </section>
   </body>
