add contents for newsletter section

--- a/index.html
+++ b/index.html
@@ -81,5 +81,14 @@
         <footer>-Amal Clooney, Law and Human Rights Activist</footer>
       </div>
     </section>
+    <section class="section-four">
+      <div class="sign-up-call">
+        <h5>Need more informationqfw <q>QA</q></h5>
+        <p>
+          Sign up for our newsletter! Get weekly travel advice, news, and more!
+        </p>
+        <button class="news-sign-up">Get Newsletter!</button>
+      </div>
+    </section>
   </body>
 </html>
