--- a/index.html
+++ b/index.html
@@ -82,11 +82,14 @@
       </div>
     </section>
     <section class="section-four">
-      <div class="sign-up-call">
-        <h5>Need more informationqfw <q>QA</q></h5>
-        <p>
-          Sign up for our newsletter! Get weekly travel advice, news, and more!
-        </p>
+      <div class="newsletter">
+        <div class="sign-up-call">
+          <h5>Need more information?</h5>
+          <p>
+            Sign up for our newsletter! Get weekly travel advice, news, and
+            more!
+          </p>
+        </div>
         <button class="news-sign-up">Get Newsletter!</button>
       </div>
     </section>
