add and style copyright section

--- a/index.html
+++ b/index.html
@@ -93,5 +93,10 @@
         <button class="news-sign-up">Get Newsletter!</button>
       </div>
     </section>
+    <section class="section-five">
+      <div class="credits">
+        <p>&#169; David Liberal - thenightlycoder</p>
+      </div>
+    </section>
   </body>
 </html>
